Content width and alignment fixed

--- a/styles/blocks/main/main.styl
+++ b/styles/blocks/main/main.styl
@@ -7,9 +7,9 @@ $main-loud
 	margin 1em 0
 
 .main
+	@extend $center
 	padding 0 content_horizontal_padding 35px
-	// mim-width 680px
-	// max-width 960px
+	max-width max_width + content_horizontal_padding * 2
 
 	.breadcrumbs
 		margin 34px 0 15px
